--- a/src/css/mediaSection.css
+++ b/src/css/mediaSection.css
@@ -1,3 +1,62 @@
 #media {
     background: var(--dim-gray);
+    padding: 40px 0;
+}
+
+.products-container {
+    width: 90%;
+    margin-left: 5%; 
+    text-align: center;
+}
+
+.product-card-container {
+    position: relative;
+    width: 350px;
+    height: 350px;
+    display: inline-block;
+    margin: 20px;
+    text-align: left;
+}
+
+.product-card {
+    position: relative;
+    display: flex;
+    background-image: url('../img/travlr.png');
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.product-card:hover .card-info {
+    transform: translateY(30%);
+    background-color: var(--opaque-darker);
+}
+
+.card-info {
+    width: 100%;
+    height: 100%;
+    background-color: var(--opaque-dark);
+    padding: 20px;
+    transform: translateY(73%);
+
+    transition: .5s all ease-in-out;
+}
+
+.card-info h2,
+.card-info p {
+    margin-bottom: 12px;
+}
+
+.add-container {
+    display: flex;
+    margin-top: 20px
+}
+
+.qty-ctrl {
+    display: flex;
+    margin-right: 20px
+}
+
+.MuiButton-contained.Mui-disabled {
+    background-color: var(--accent-dark) !important;
 }
