--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -10,12 +10,16 @@
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .middle {
-    margin: 0 30px;
+    /* margin: 0 30px; */
     height: 50px;
+}
+
+.logo {
+    margin: 20px;
 }
 
 .social {
@@ -49,3 +53,9 @@
     color: var(--main-accent)
 }
 
+@media only screen and (max-width: 410px) {
+    .logo {
+        transform: scale(.75);
+        margin: 10px
+    }
+}
