--- a/src/css/mediaSection.css
+++ b/src/css/mediaSection.css
@@ -1,6 +1,6 @@
 #media {
     background: var(--dim-gray);
-    padding: 40px 0;
+    padding: 80px 0;
 }
 
 .products-container {
@@ -21,7 +21,7 @@
 .product-card {
     position: relative;
     display: flex;
-    background-image: url('../img/travlr.png');
+    /* background-image: url('../img/travlr.png'); */
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -59,4 +59,22 @@
 
 .MuiButton-contained.Mui-disabled {
     background-color: var(--accent-dark) !important;
+}
+
+@media only screen and (max-width: 500px) {
+    .product-card-container {
+        width: 250px;
+        height: 250px;
+    }    
+    .card-info {
+        font-size: 12px;
+        transform: translateY(67%);
+    }
+    .product-card:hover .card-info {
+        transform: translateY(0);
+    }
+    .add-container {
+        flex-direction: column;
+        width: fit-content;
+    }
 }
