--- a/src/css/quartetSection.css
+++ b/src/css/quartetSection.css
@@ -9,3 +9,9 @@
     align-items: center;
     text-align: start;
 }
+
+.musician-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
