--- a/src/css/aboutSection.css
+++ b/src/css/aboutSection.css
@@ -4,15 +4,20 @@
 }
 
 .bio {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: fit-content;
+    margin: auto;
     margin-bottom: 50px;
 }
 
+.bio-img {
+    float: left;
+    margin: 0px 30px 15px 0px;
+    width: 100%;
+    max-width: 300px;
+}
+
 .text-block {
-    max-width: 85ch;
+    max-width: 80ch;
     margin-bottom: 30px;
 }
 
@@ -21,6 +26,7 @@
     font-weight: 400;
     width: 100%;
     text-align: center;
+    line-height: 1.25;
 }
 
 .student-container {
@@ -55,5 +61,13 @@
     }
     .student {
         grid-row: 1;
+    }
+}
+
+@media only screen and (max-width: 676px) {
+    .bio-img {
+        display: flex;
+        margin: 0 auto 30px;
+        float: none;
     }
 }
