--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,13 +1,14 @@
 .contact-container {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    column-gap: 30px;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .contact-half {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 30px;
 }
 
 .contact-message p {
