--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -6,16 +6,12 @@
 }
 
 .affiliations {
-    width: fit-content;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    flex-wrap: wrap;
     margin-bottom: 20px;
-}
-
-.middle {
-    /* margin: 0 30px; */
-    height: 50px;
 }
 
 .logo {
