--- a/src/css/homeSection.css
+++ b/src/css/homeSection.css
@@ -1,10 +1,14 @@
 .home-section {
     min-height: 100vh;
-    background-image: url(../img/Travler\ cover.png);
+    background-image: linear-gradient(
+        rgba(0, 0, 0, .3), 
+        rgba(0, 0, 0, .3)
+      ), url(../img/TimWithAltoBW.jpg);
     background-size: cover;
-    background-position: 50% 20%;
+    background-position: 100% 0%;
     display: flex;
     justify-content: center;
+    margin-top: 53px;
 }
 
 @media only screen and (max-width: 575px) {
