--- a/src/css/mediaSection.css
+++ b/src/css/mediaSection.css
@@ -1,6 +1,36 @@
 #media {
     background: var(--dim-gray);
+    /* background-image: url(../img/TimSitting.jpg); */
+    background-size: cover;
     padding: 80px 0;
+}
+
+.media-heading {
+    width: fit-content; 
+    left: 0; 
+    right: 0; 
+    background-color: var(--main-gray); 
+    padding: 20px; 
+    border-radius: 5px; 
+    margin: 20px auto;
+}
+
+.videos-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 90%;
+    margin-left: 5%;
+}
+
+.video-item {
+    max-width: 400px;
+    margin: 20px;
+}
+
+.video-desc {
+    text-align: center;
+    margin-top: 10px;
 }
 
 .products-container {
@@ -21,7 +51,7 @@
 .product-card {
     position: relative;
     display: flex;
-    /* background-image: url('../img/travlr.png'); */
+    /* background-image: url(../img/travlr.png); */
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -61,7 +91,16 @@
     background-color: var(--accent-dark) !important;
 }
 
+@media only screen and (min-width: 1400px) {
+    .video-item {
+        max-width: 500px;
+    }
+}
+
 @media only screen and (max-width: 500px) {
+    .video-item {
+        max-width: 325px;
+    }
     .product-card-container {
         width: 250px;
         height: 250px;
