--- a/src/css/quartetSection.css
+++ b/src/css/quartetSection.css
@@ -1,5 +1,22 @@
 #quartet {
     text-align: center;
+    padding: 0;
+}
+
+.parallax {
+    padding: 80px 30px 20px;
+}
+
+.parallax-outer {
+    background: black;
+}
+
+.react-parallax-bgimage {
+    bottom: -25%;
+}
+
+.react-parallax-background-children {
+    left: 130% !important;
 }
 
 .quartet-bio {
@@ -14,4 +31,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 30px 30px 80px;
+}
+
+@media only screen and (max-width: 784px) {
+    .react-parallax-bgimage {
+        left: 70% !important;
+    }    
+}
+
+@media only screen and (max-width: 574px) {
+    .react-parallax-bgimage {
+        left: 90% !important;
+    }    
 }
