--- a/src/css/homeSection.css
+++ b/src/css/homeSection.css
@@ -4,6 +4,7 @@
         rgba(0, 0, 0, .3), 
         rgba(0, 0, 0, .3)
       ), url(../img/TimWithAltoBW.jpg);
+      background-attachment: fixed;
     background-size: cover;
     background-position: 100% 0%;
     display: flex;
