--- a/src/css/mediaSection.css
+++ b/src/css/mediaSection.css
@@ -7,6 +7,8 @@
 
 .media-heading {
     width: fit-content; 
+    max-width: 90vw;
+    text-align: center;
     left: 0; 
     right: 0; 
     background-color: var(--main-gray); 
