--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,26 +1,20 @@
-@import './navbar.css';
-@import './homeSection.css';
-@import './aboutSection.css';
-@import './mediaSection.css';
-@import './quartetSection.css';
-@import './footer.css';
-@import './contact.css';
-@import './cart.css';
+@import './variables';
+@import './mixins';
+@import './nav';
+@import './home';
+@import './about';
+@import './media';
+@import './quartet';
+@import './footer';
+@import './contact';
+@import './cart';
 
+//General styling
 :root {
-    --main-gray: hsl(180, 2%, 16%);
-    --main-gray-opaque: hsla(180, 2%, 16%, .75);
-    --gray-active: hsl(180, 2%, 36%);
-    --main-brown: hsl(30, 12%, 27%);
     --main-white: rgb(230, 230, 230);
     --main-accent: hsl(105, 65%, 60%);
     --accent-dark: hsl(105, 65%, 40%);
     --accent-darker: hsl(105, 65%, 30%);
-    --dim-gray: hsl(150, 1%, 39%);
-    --cadet-grey: #93a3b1;
-    --bistre-brown: #322214;
-    --opaque-dark: rgba(0, 0, 0, 0.7);
-    --opaque-darker: rgba(0, 0, 0, 0.85);
     --main-red: rgb(255, 0, 0);
     --dark-red: rgb(192, 0, 0);
 }
@@ -31,21 +25,10 @@
     padding: 0;
 }
 
-/* html {
-    scroll-behavior: smooth;
-} */
-
 body {
-    background-color: var(--main-white);
-    /* background-color: rgb(58, 52, 46); */
-    color: var(--main-white);
+    color: $mainWhite;
     font-family: 'Lato', sans-serif;
     overflow-x: hidden;
-}
-
-.serif {
-    font-family: 'Uchen', serif;
-    font-weight: 400;
 }
 
 a {
@@ -63,21 +46,51 @@ a {
 }
 
 .section {
-    background: var(--main-brown);
+    background: $mainBrown;
     padding: 80px 30px;
 }
+
+//Utility styles
+.heading {
+    margin-bottom: 30px;
+    font-weight: 400;
+    width: 100%;
+    text-align: center;
+    line-height: 1.25;
+}            
+
+.serif {
+    font-family: 'Uchen', serif;
+    font-weight: 400;
+}  
 
 .mb-20 {
     margin-bottom: 20px;
 }
+
 .mb-30 {
     margin-bottom: 30px;
 }
+
+.translate-0 {
+    transform: translateX(0);
+}
+
+.translate-100 {
+    transform: translateX(100%);
+}
+
 .text-center {
     text-align: center;
 }
+
+.text-block {
+    max-width: 80ch;
+    margin-bottom: 30px;
+}
+
 .hyperlink {
-    color: var(--main-accent);
+    color: $accent;
     text-decoration: underline;
     cursor: pointer;
 }
