--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -812,7 +812,8 @@
 .contact-container .contact-form .input-container textarea {
   max-width: 300px;
   resize: none;
-  padding: 15px 7px !important;
+  padding: 18px 7px !important;
+  font-family: 'Lato', sans-serif;
 }
 
 @media only screen and (max-width: 756px) {
@@ -826,7 +827,7 @@
 .contact-container .contact-form .input-container .input {
   margin-bottom: 10px;
   border: none;
-  padding: 7px;
+  padding: 14px 7px 7px;
   background-color: #e6e6e6;
   border-radius: 4px;
 }
@@ -948,7 +949,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  font-size: 20px;
+  font-size: 18px;
   letter-spacing: .075em;
   font-weight: 400;
 }
