--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -1,117 +1,118 @@
 #media {
-    background: $dimGray;
-    /* background-image: url(../img/TimSitting.jpg); */
-    background-size: cover;
-    padding: 80px 0;
-}    
+	background: $dimGray;
+	/* background-image: url(../img/TimSitting.jpg); */
+	background-size: cover;
+	padding: 80px 0;
+}
 
 .media-heading {
-    width: fit-content; 
-    max-width: 90vw;
-    text-align: center;
-    left: 0; 
-    right: 0; 
-    background-color: $darkGray; 
-    padding: 20px; 
-    border-radius: 5px; 
-    margin: 20px auto;
+	width: fit-content;
+	max-width: 90vw;
+	text-align: center;
+	left: 0;
+	right: 0;
+	// background-color: $darkGray;
+	padding: 20px;
+	border-radius: 5px;
+	margin: 20px auto;
 }
-    
+
 .videos-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 90%;
-    margin-left: 5%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	width: 90%;
+	margin-left: 5%;
 
-    .video-item {
-        max-width: 400px;
-        margin: 20px;
+	.video-item {
+		max-width: 400px;
+		margin: 20px;
 
-        @include responsiveLarge(1400px) {
-            max-width: 500px;
-        }
+		@include responsiveLarge(1400px) {
+			max-width: 500px;
+		}
 
-        @include responsiveSmall(500px) {
-            max-width: 325px;
-        }
+		@include responsiveSmall(500px) {
+			max-width: 325px;
+		}
 
-        .video-desc {
-            text-align: center;
-            margin-top: 10px;
-        }            
-    }        
-}   
-    
+		.video-desc {
+			text-align: center;
+			margin-top: 10px;
+		}
+	}
+}
+
 .products-container {
-    width: 90%;
-    margin-left: 5%; 
-    text-align: center;
+	width: 90%;
+	margin-left: 5%;
+	text-align: center;
 
-    .product-card-container {
-        position: relative;
-        width: 350px;
-        height: 350px;
-        display: inline-block;
-        margin: 20px;
-        text-align: left;
+	.product-card-container {
+		position: relative;
+		width: 350px;
+		height: 350px;
+		display: inline-block;
+		margin: 20px;
+		text-align: left;
 
-        @include responsiveSmall(500px){
-            width: 250px;
-            height: 250px;        
-        }
+		@include responsiveSmall(500px) {
+			width: 250px;
+			height: 250px;
+		}
 
-        .product-card {
-            position: relative;
-            display: flex;
-            /* background-image: url(../img/travlr.png); */
-            background-size: cover;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
+		.product-card {
+			position: relative;
+			display: flex;
+			background-image: url(../img/travlr.png);
+			background-size: cover;
+			width: 100%;
+			height: 100%;
+			overflow: hidden;
 
-            &:hover .card-info {
-                transform: translateY(30%);
-                background-color: $opaqueDarker;                    
-            }
+			&:hover .card-info {
+				transform: translateY(30%);
+				background-color: $opaqueDarker;
+			}
 
-            @include responsiveSmall(500px) {
-                &:hover .card-info {
-                    transform: translateY(0);
-                }
-            }
+			@include responsiveSmall(500px) {
+				&:hover .card-info {
+					transform: translateY(0);
+				}
+			}
 
-            .card-info {
-                width: 100%;
-                height: 100%;
-                background-color: $opaqueDark;
-                padding: 20px;
-                transform: translateY(73%);
-                transition: .5s all ease-in-out;
+			.card-info {
+				width: 100%;
+				height: 100%;
+				background-color: $opaqueDark;
+				padding: 20px;
+				transform: translateY(73%);
+				transition: 0.5s all ease-in-out;
 
-                @media only screen and (max-width: 500px) {
-                    font-size: 12px;
-                    transform: translateY(67%);                
-                }
+				@media only screen and (max-width: 500px) {
+					font-size: 12px;
+					transform: translateY(67%);
+				}
 
-                h2, p {
-                    margin-bottom: 12px;
-                }
+				h2,
+				p {
+					margin-bottom: 12px;
+				}
 
-                .add-container {
-                    display: flex;
-                    margin-top: 20px;
+				.add-container {
+					display: flex;
+					margin-top: 20px;
 
-                    @media only screen and (max-width: 500px) {
-                        flex-direction: column;
-                        width: fit-content;                    
-                    }
-                }                    
-            }                
-        }            
-    }        
+					@media only screen and (max-width: 500px) {
+						flex-direction: column;
+						width: fit-content;
+					}
+				}
+			}
+		}
+	}
 }
 
 .MuiButton-contained.Mui-disabled {
-    background-color: $accentDark !important;
+	background-color: $accentDark !important;
 }
