refactor former student components

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,93 +12,98 @@
 
 //General styling
 :root {
-    --main-white: rgb(230, 230, 230);
-    --main-accent: hsl(105, 65%, 60%);
-    --accent-dark: hsl(105, 65%, 40%);
-    --accent-darker: hsl(105, 65%, 30%);
-    --main-red: rgb(255, 0, 0);
-    --dark-red: rgb(192, 0, 0);
+	--main-white: rgb(230, 230, 230);
+	--main-accent: hsl(105, 65%, 60%);
+	--accent-dark: hsl(105, 65%, 40%);
+	--accent-darker: hsl(105, 65%, 30%);
+	--main-red: rgb(255, 0, 0);
+	--dark-red: rgb(192, 0, 0);
 }
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
 body {
-    color: $mainWhite;
-    font-family: 'Lato', sans-serif;
-    overflow-x: hidden;
+	color: $mainWhite;
+	font-family: 'Lato', sans-serif;
+	overflow-x: hidden;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 .app {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
 }
 
 .section {
-    background: $mainBrown;
-    padding: 80px 30px;
+	background: $mainBrown;
+	padding: 80px 30px;
 }
 
 //Utility styles
 .heading {
-    margin-bottom: 30px;
-    font-weight: 400;
-    width: 100%;
-    text-align: center;
-    line-height: 1.25;
-}            
+	margin-bottom: 30px;
+	font-weight: 400;
+	width: 100%;
+	text-align: center;
+	line-height: 1.25;
+}
 
 .serif {
-    font-family: 'Uchen', serif;
-    font-weight: 400;
-}  
+	font-family: 'Uchen', serif;
+	font-weight: 400;
+}
 
 .mb-20 {
-    margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 .mb-30 {
-    margin-bottom: 30px;
+	margin-bottom: 30px;
+}
+
+.mb-60 {
+	margin-bottom: 60px;
 }
 
 .translate-0 {
-    transform: translateX(0);
+	transform: translateX(0);
 }
 
 .translate-100 {
-    transform: translateX(100%);
+	transform: translateX(100%);
 }
 
 .text-center {
-    text-align: center;
+	text-align: center;
 }
 
 .text-block {
-    max-width: 80ch;
-    margin-bottom: 30px;
+	max-width: 80ch;
+	margin-bottom: 30px;
 }
 
 .hyperlink {
-    color: $accent;
-    text-decoration: underline;
-    cursor: pointer;
+	color: $accent;
+	text-decoration: underline;
+	cursor: pointer;
+	word-break: break-all;
 }
 
 .preload * {
-    -webkit-transition: none !important;
-    -moz-transition: none !important;
-    -ms-transition: none !important;
-    -o-transition: none !important;
+	-webkit-transition: none !important;
+	-moz-transition: none !important;
+	-ms-transition: none !important;
+	-o-transition: none !important;
 }
