--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -384,11 +384,9 @@
 }
 
 .student-container {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: auto auto;
-      grid-template-columns: auto auto;
-  grid-gap: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   width: 100%;
   background: rgba(40, 42, 42, 0.75);
   border-radius: 30px;
@@ -397,10 +395,10 @@
 
 @media only screen and (max-width: 855px) {
   .student-container {
-    -ms-grid-columns: none;
-        grid-template-columns: none;
-    -ms-grid-rows: auto auto;
-        grid-template-rows: auto auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
     width: 70%;
     min-width: 325px;
     padding: 40px 20px;
@@ -427,8 +425,7 @@
 
 @media only screen and (max-width: 855px) {
   .student-container .student {
-    -ms-grid-row: 1;
-    grid-row: 1;
+    margin-top: 40px;
   }
 }
 
@@ -445,9 +442,33 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: initial;
-      -ms-flex-align: initial;
-          align-items: initial;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-flex: 4;
+      -ms-flex-positive: 4;
+          flex-grow: 4;
+  text-align: center;
+  padding: 0 40px;
+}
+
+@media only screen and (max-width: 444px) {
+  .student-container .student-info {
+    padding: 0;
+  }
+}
+
+.student-container .student-info h3 {
+  font-size: 2rem;
+}
+
+@media only screen and (max-width: 855px) {
+  .right-student {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 #media {
@@ -670,6 +691,12 @@
       -ms-flex-align: center;
           align-items: center;
   padding: 30px 30px 80px;
+}
+
+@media only screen and (max-width: 444px) {
+  .musician-container {
+    padding: 0;
+  }
 }
 
 #footer {
@@ -1024,6 +1051,10 @@ a {
   margin-bottom: 30px;
 }
 
+.mb-60 {
+  margin-bottom: 60px;
+}
+
 .translate-0 {
   -webkit-transform: translateX(0);
           transform: translateX(0);
@@ -1047,6 +1078,7 @@ a {
   color: #78db57;
   text-decoration: underline;
   cursor: pointer;
+  word-break: break-all;
 }
 
 .preload * {
